Adding basic html structure.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CodersCamp | Projekt 1 - HTML i CSS</title>
-    <meta name="description" content="CodersCamp to darmowy, otwarty kurs programowania webowego we Wrocławiu. Sprawdź, czego nauczysz się na CodersCamp i spróbuj swoich sił w branży IT!">
-
+    <meta name="description" content="My basic portfolio.">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
-<p>CodersCamp - projekt 1. Tutaj możesz zacząć swoją zabawę!</p>
+<head>
+    <div class="navbar-container">
+    <nav class="nav">
+        <div class="nav__logo">
+            <div class="nav__logo__image"></div>
+        </div>
+        <ul class = "nav__links">
+            <li class="nav__links__listItem"><a href="">About me</a></li>
+            <li class="nav__links__listItem"><a href="">Skills</a></li>
+            <li class="nav__links__listItem"><a href="">Portfolio</a></li>
+            <li class="nav__links__listItem"><a href="">Contact</a></li>
+        </ul>
+    </nav>
+</div>
+</head>
+<main>
+    <section id="langing">
+        .background+text-wrapper>h1+h3+.media>ul.icons>li.icons__listElement*4>a>img.icons__listElement__icon
+    </section>
+    <section>
+        .action>h2{I am happy to help you with any problem!}+(.buttonsWrapper>.buttonsWrapper__button*2)      
+    </section>
+    <section id="about">
+        .card>.card__icon+(card__info>ul.card__info__list>li.card__info__list__element*5)+card__divider+card__description
+    </section>
+    <section id="skills">
+        h2.tittle+.wrapper>.card>ul.card__list>li.card__list__element>
+    </section>
+    <section id="portolio">
+        h2.tittle+.grid>grid__item*5>h3+p+.button
+    </section>
+    <section id="contact">
+        h2.tittle+.wrapper>.leftSide>(.leftSide__icon+p.leftSide__description+.leftSide__break+(ul.leftSide__media>li.leftSide__media__icon*4>a>img)+(ul.leftSide__info>li.leftSide__info__line*5))+.rightSide>h3.tittle+form.contactForm>input.contactForm--name:text+input.contactForm--email:email+input.contactForm--topic:text+input.contactForm--message:text
+    </section>
+</main>
 
 </body>
 </html>
