Testing if merge will count as contribution after changing email address

--- a/index.html
+++ b/index.html
@@ -202,6 +202,6 @@
         </div>
     </section>
 </main>
-
+<!-- Testing if merge will count as contribution after changing email address -->
 </body>
 </html>
