Making website responsive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         <div class="nav__logo">
             <div class="nav__logo__image"><i class="fas fa-laptop-code"></i>Dev</div>
         </div>
+        <div class="nav__burger">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul class = "nav__burger__links">
+                <li class="nav__links__listItem nav__burger__links__listItem"><a href="#about">About me</a></li>
+                <li class="nav__links__listItem nav__burger__links__listItem"><a href="#skills">Skills</a></li>
+                <li class="nav__links__listItem nav__burger__links__listItem"><a href="#portfolio">Portfolio</a></li>
+                <li class="nav__links__listItem nav__burger__links__listItem"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
         <ul class = "nav__links">
             <li class="nav__links__listItem"><a href="#about">About me</a></li>
             <li class="nav__links__listItem"><a href="#skills">Skills</a></li>
