Finishing mobile nav

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         <div class="nav__burger">
             <input type="checkbox" />
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="nav__burger__top"></span>
+            <span class="nav__burger__middle"></span>
+            <span class="nav__burger__bottom"></span>
             <ul class = "nav__burger__links">
                 <li class="nav__links__listItem nav__burger__links__listItem"><a href="#about">About me</a></li>
                 <li class="nav__links__listItem nav__burger__links__listItem"><a href="#skills">Skills</a></li>
@@ -214,6 +214,5 @@
         </div>
     </section>
 </main>
-<!-- Testing if merge will count as contribution after changing email address -->
 </body>
 </html>
